--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,22 @@
-<!-- <app-display></app-display> -->
-<router-outlet />
+<mat-sidenav-container class="app-sidenav-container">
+	<mat-sidenav mode="side" opened class="app-sidenav">
+		<mat-toolbar color="primary">Courses</mat-toolbar>
+		<mat-nav-list>
+			<a mat-list-item routerLink="/course/angular"><mat-icon>rocket</mat-icon> Angular</a>
+			<a mat-list-item routerLink="/course/javascript"><mat-icon>code</mat-icon> JavaScript</a>
+			<a mat-list-item routerLink="/course/csharp"><mat-icon>memory</mat-icon> C#</a>
+			<a mat-list-item routerLink="/course/dotnetcore"><mat-icon>cloud</mat-icon> .NET Core</a>
+			<a mat-list-item routerLink="/add"><mat-icon>add</mat-icon> Add Question</a>
+		</mat-nav-list>
+	</mat-sidenav>
+
+	<mat-sidenav-content>
+		<mat-toolbar color="primary">
+			<span>Revision</span>
+		</mat-toolbar>
+
+		<div class="app-content">
+			<router-outlet></router-outlet>
+		</div>
+	</mat-sidenav-content>
+</mat-sidenav-container>
